Adicoionando a fução agendar, chat improvisado e conserto de bugs

--- a/frontend/src/components/user/UserAreaChat.css
+++ b/frontend/src/components/user/UserAreaChat.css
@@ -46,6 +46,19 @@ h3 {
 	padding-top: 1.5%;
 	margin-left: 0.1%;
 }
+
+.btnClickMatch button{
+	border: none;
+	background-color: transparent;
+	border-style: none;
+	cursor: none;
+	transform: none;
+	transition: none;
+	border-color: transparent;
+	box-shadow: none;
+
+}
+
 .wdt15 {
 	width: 15%;
 }
@@ -54,4 +67,70 @@ h3 {
 }
 .wdt10 {
 	width: 10%;
+}
+
+.alignmentBarPerfil{
+	float: right;
+	padding-top: 2%;
+}
+
+.wdtPerfil {
+    width: 100%;    
+}
+
+.verMais {
+	margin-top: 2%;
+	margin-right: 50%;
+	margin-left: -20%;
+}
+
+.verMais h5{
+	color: white;
+}
+
+
+.verMais button{
+	align-items: center;
+    background: rgb(252, 2, 2);
+	cursor: none;
+	margin-left: 1%;
+	border-style: solid;
+	border-color: black;
+	border-width: 1px;
+	border-radius: 5px 5px 5px 5px;
+}
+
+.verMais footer, p, strong{
+	align-items: center;
+	color: black;
+}
+
+.verMais img{
+    transform: translateY(-5px);
+	transition: all 0.2s;
+	width: 50%;
+	border: black;
+	border-style: inset;
+}
+
+.areaChatImg img{
+	margin-top: 1%;
+	width: 80%;
+	height: 87vh;
+	margin-left: -60%;
+	border-radius: 0%;
+	border: none;
+}
+
+
+@media(max-width: 576px) {
+	.areaChatImg img{
+		margin-top: 1%;
+		width: 47%;
+		height: 130vh;
+		margin-left: -72%;
+		border-radius: 0%;
+		border: none;
+	}
+
 }
